--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -66,139 +66,124 @@
     }
   }
 
+
   .hero {
   min-height: calc(100vh - 105px);
   background-color: var(--primary-color);
-  background-image: url(../img/hero-bg.jpg);
+  background-image: url("../img/hero-bg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   padding-top: 170px;
-  padding-bottom: 100px
+  padding-bottom: 100px;
 }
-
-@supports (margin-bottom:clamp(5rem, 4.2788461538rem + 3.2051282051vw, 8.125rem)) {
+@supports (margin-bottom: clamp( 5rem , 4.2788461538rem  +  3.2051282051vw , 8.125rem )) {
   .hero {
-    margin-bottom: clamp(5rem, 4.2788461538rem + 3.2051282051vw, 8.125rem)
+    margin-bottom: clamp( 5rem , 4.2788461538rem  +  3.2051282051vw , 8.125rem );
   }
 }
-
-@supports not (margin-bottom:clamp(5rem, 4.2788461538rem + 3.2051282051vw, 8.125rem)) {
+@supports not (margin-bottom: clamp( 5rem , 4.2788461538rem  +  3.2051282051vw , 8.125rem )) {
   .hero {
-    margin-bottom: calc(5rem + 3.125 * (100vw - 22.5rem)/ 97.5)
+    margin-bottom: calc(5rem + 3.125 * (100vw - 22.5rem) / 97.5);
   }
 }
-
-@media screen and (max-width:1400px) {
+@media screen and (max-width: 1400px) {
   .hero {
-    background-position-x: 30%
+    background-image: url("../img/hero-bg-mobile.jpg");
   }
 }
-
-@media screen and (min-height:1000px) {
+@media screen and (min-height: 1000px) {
   .hero {
-    background-position: 60% center
+    background-position: 60% center;
   }
 }
-
-@media screen and (max-width:768px) {
+@media screen and (max-width: 768px) {
   .hero {
-    background-position-x: 41%;
-    padding-top: 120px
+    background-image: url("../img/hero-bg.jpg");
+    padding-top: 120px;
   }
 }
-
-@media screen and (max-width:360px) {
+@media screen and (max-width: 576px) {
   .hero {
-    background-position-x: 10%
+    background-position: 30%;
   }
 }
-
+@media screen and (max-width: 360px) {
+  .hero {
+    background-position-x: 10%;
+  }
+}
 .hero__title {
-  margin-bottom: 30px
+  margin-bottom: 30px;
 }
-
-@supports (font-size:clamp(2.5rem, 1.6923076923rem + 3.5897435897vw, 6rem)) {
+@supports (font-size: clamp( 2.5rem , 1.6923076923rem  +  3.5897435897vw , 6rem )) {
   .hero__title {
-    font-size: clamp(2.5rem, 1.6923076923rem + 3.5897435897vw, 6rem)
+    font-size: clamp( 2.5rem , 1.6923076923rem  +  3.5897435897vw , 6rem );
   }
 }
-
-@supports not (font-size:clamp(2.5rem, 1.6923076923rem + 3.5897435897vw, 6rem)) {
+@supports not (font-size: clamp( 2.5rem , 1.6923076923rem  +  3.5897435897vw , 6rem )) {
   .hero__title {
-    font-size: calc(2.5rem + 3.5 * (100vw - 22.5rem)/ 97.5)
+    font-size: calc(2.5rem + 3.5 * (100vw - 22.5rem) / 97.5);
   }
 }
-
 .hero__btn {
-  min-width: 349px
+  min-width: 349px;
 }
-
-@media screen and (max-width:576px) {
-  .hero {
-    background-position: 30%
-  }
-
+@media screen and (max-width: 576px) {
   .hero__btn {
     min-width: unset;
-    width: 100%
+    width: 100%;
   }
 }
-
 .hero__info {
-  max-width: 823px
+  max-width: 823px;
 }
-
 .hero__inner {
-  min-height: inherit
+  min-height: inherit;
 }
-
 .hero__description {
   max-width: 608px;
-  line-height: 1.1
+  line-height: 1.1;
 }
-
-@supports (margin-bottom:clamp(2.1875rem, 1.8269230769rem + 1.6025641026vw, 3.75rem)) {
+@supports (margin-bottom: clamp( 2.1875rem , 1.8269230769rem  +  1.6025641026vw , 3.75rem )) {
   .hero__description {
-    margin-bottom: clamp(2.1875rem, 1.8269230769rem + 1.6025641026vw, 3.75rem)
+    margin-bottom: clamp( 2.1875rem , 1.8269230769rem  +  1.6025641026vw , 3.75rem );
   }
 }
-
-@supports not (margin-bottom:clamp(2.1875rem, 1.8269230769rem + 1.6025641026vw, 3.75rem)) {
+@supports not (margin-bottom: clamp( 2.1875rem , 1.8269230769rem  +  1.6025641026vw , 3.75rem )) {
   .hero__description {
-    margin-bottom: calc(2.1875rem + 1.5625 * (100vw - 22.5rem)/ 97.5)
+    margin-bottom: calc(2.1875rem + 1.5625 * (100vw - 22.5rem) / 97.5);
   }
 }
-
 .hero__notice {
   position: relative;
   line-height: 1.3;
-  gap: 10px
+  gap: 10px;
 }
-
-@supports (margin-bottom:clamp(2.1875rem, 1.8269230769rem + 1.6025641026vw, 3.75rem)) {
+@supports (margin-bottom: clamp( 2.1875rem , 1.8269230769rem  +  1.6025641026vw , 3.75rem )) {
   .hero__notice {
-    margin-bottom: clamp(2.1875rem, 1.8269230769rem + 1.6025641026vw, 3.75rem)
+    margin-bottom: clamp( 2.1875rem , 1.8269230769rem  +  1.6025641026vw , 3.75rem );
   }
 }
-
-@supports not (margin-bottom:clamp(2.1875rem, 1.8269230769rem + 1.6025641026vw, 3.75rem)) {
+@supports not (margin-bottom: clamp( 2.1875rem , 1.8269230769rem  +  1.6025641026vw , 3.75rem )) {
   .hero__notice {
-    margin-bottom: calc(2.1875rem + 1.5625 * (100vw - 22.5rem)/ 97.5)
+    margin-bottom: calc(2.1875rem + 1.5625 * (100vw - 22.5rem) / 97.5);
   }
 }
-
-@supports (font-size:clamp(1rem, 0.9423076923rem + 0.2564102564vw, 1.25rem)) {
+@supports (font-size: clamp( 1rem , 0.9423076923rem  +  0.2564102564vw , 1.25rem )) {
   .hero__notice {
-    font-size: clamp(1rem, .9423076923rem + .2564102564vw, 1.25rem)
+    font-size: clamp( 1rem , 0.9423076923rem  +  0.2564102564vw , 1.25rem );
   }
 }
-
-@supports not (font-size:clamp(1rem, 0.9423076923rem + 0.2564102564vw, 1.25rem)) {
+@supports not (font-size: clamp( 1rem , 0.9423076923rem  +  0.2564102564vw , 1.25rem )) {
   .hero__notice {
-    font-size: calc(1rem + .25 * (100vw - 22.5rem)/ 97.5)
+    font-size: calc(1rem + 0.25 * (100vw - 22.5rem) / 97.5);
   }
 }
-
+.hero__notice svg {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 50px;
+  flex: 0 0 50px;
+}
 
   </style>
 
