--- a/src/scss/sections/_packages.scss
+++ b/src/scss/sections/_packages.scss
@@ -1,7 +1,7 @@
 .packages{
   padding-bottom: 130px;
 
-  @media screen and (max-width: 1400px) {
+  @media screen and (max-width: 1200px) {
     padding-bottom: 0px;
   }
 
@@ -64,6 +64,15 @@
   }
 
   &__image {
+    border-radius: 50%;
+    background-color: #F1F6F6;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+
+    max-width: 128px;
+    height: 128px;
+
     @media screen and (max-width: 1400px) {
       max-width: 110px;
       height: 110px;
