--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer section-padding-top">
+<footer class="footer">
   <div class="container">
     <div class="footer__inner grid grid-cols-12">
       <div class="footer__info grid justify-items-center" >
@@ -25,7 +25,7 @@
             </a>
         </div>
       </div>
-      <div class="footer__actions flex justify-between align-items-center">
+      <div class="footer__actions bg-primary color-white flex justify-between align-items-center">
         <a href="#" class="footer__link footer__link--terms primary-hover" target="_blank">
           Terms and conditions
         </a>
