--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -12,7 +12,7 @@
 
 
 
-  <style>
+  <!-- <style>
     .header {
     position: absolute;
     left: 0;
@@ -67,7 +67,7 @@
   }
 
 
-  .hero {
+.hero {
   min-height: calc(100vh - 105px);
   background-color: var(--primary-color);
   background-image: url("../img/hero-bg.jpg");
@@ -185,7 +185,7 @@
   flex: 0 0 50px;
 }
 
-  </style>
+  </style> -->
 
 
   <link rel="stylesheet" href="css/vendor.css">
