--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <header class="header color-white">
-  <div class="container">
+  <div class="container header__container">
     <div class="header__inner flex justify-between">
       <div class="header__logos flex align-items-center">
         <a href="#" class="header__logo">
