--- a/src/scss/sections/_info.scss
+++ b/src/scss/sections/_info.scss
@@ -1,21 +1,19 @@
 .info {
-  position: relative;
-  padding-bottom: 90px;
-  overflow: hidden;
-  min-height: 428px;
-
+  padding-top: 0;
   @media screen and (max-width: 576px) {
     padding-bottom: 0;
   }
 
   &__inner {
-    min-height: inherit;
+    min-height: 428px;
     align-items: center;
-
+    position: relative;
+    padding-bottom: 90px;
+    overflow: hidden;
     @media screen and (max-width: 576px) {
       align-items: start;
     }
-  }
+
 
   &::before,
   &::after {
@@ -66,6 +64,8 @@
       display: none;
     }
   }
+  }
+
 
   @include adaptiveValue(padding-top, 90, 70, 1920, 360, 1);
 
@@ -76,9 +76,9 @@
 
   &__content {
     z-index: 2;
-    grid-column:6/13;
+    grid-column: 5/12;
     @include adaptiveValue(row-gap, 60, 35, 1200, 576, 1);
-
+    padding-top: 40px;
 
     @media screen and (max-width: 992px) {
       grid-column: 4/13;
@@ -87,9 +87,6 @@
     @media screen and (max-width: 576px) {
       grid-column: 1/13;
     }
-  }
-
-  &__inner {
   }
 
 
