--- a/src/scss/sections/_powered.scss
+++ b/src/scss/sections/_powered.scss
@@ -3,7 +3,8 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-image: url('../img/pink-bg.jpg');
-
+  background-position: center center;
+  background-attachment: fixed;
   @media screen and (max-width: 1200px) {
     min-height: 500px;
   }
