--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -25,7 +25,7 @@
             </a>
         </div>
       </div>
-      <div class="footer__actions bg-primary color-white flex justify-between align-items-center">
+      <div class="footer__actions color-white flex justify-between align-items-center">
         <a href="#" class="footer__link footer__link--terms primary-hover" target="_blank">
           Terms and conditions
         </a>
