--- a/src/scss/sections/_powered.scss
+++ b/src/scss/sections/_powered.scss
@@ -1,3 +1,10 @@
+
+@supports(background-attachment: fixed) {
+  .powered {
+    background-attachment: fixed;
+  }
+}
+
 .powered {
   min-height: 662px;
   background-repeat: no-repeat;
@@ -5,6 +12,8 @@
   background-image: url('../img/pink-bg.jpg');
   background-position: center center;
   background-attachment: fixed;
+
+
   @media screen and (max-width: 1200px) {
     min-height: 500px;
   }
