--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -10,183 +10,315 @@
   <link rel="preload" href="fonts/Manrope-Medium.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/Manrope-Semibold.woff2" as="font" type="font/woff2" crossorigin>
 
-
-
-  <!-- <style>
+  <!-- criticals to reduce cls -->
+  <style>
     .header {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    padding-top: 38px
-  }
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  padding-top: 38px
+}
 
-  @supports (gap:clamp(0.625rem, 0.4166666667rem + 0.4340277778vw, 0.9375rem)) {
+@supports (gap:clamp(0.625rem, 0.4166666667rem + 0.4340277778vw, 0.9375rem)) {
+  .header__logos {
+    gap: clamp(.625rem, .4166666667rem + .4340277778vw, .9375rem)
+  }
+}
+
+@supports not (gap:clamp(0.625rem, 0.4166666667rem + 0.4340277778vw, 0.9375rem)) {
+  .header__logos {
+    gap: calc(.625rem + .3125 * (100vw - 48rem)/ 72)
+  }
+}
+
+@media screen and (max-width:1670px) {
+  @supports (padding-left:clamp(0.0000000625rem, -11.8879054508rem + 19.1740411504vw, 8.125rem)) {
     .header__logos {
-      gap: clamp(.625rem, .4166666667rem + .4340277778vw, .9375rem)
+      padding-left: clamp(.0000000625rem, -11.8879054508rem + 19.1740411504vw, 8.125rem)
     }
   }
 
-  @supports not (gap:clamp(0.625rem, 0.4166666667rem + 0.4340277778vw, 0.9375rem)) {
+  @supports not (padding-left:clamp(0.0000000625rem, -11.8879054508rem + 19.1740411504vw, 8.125rem)) {
     .header__logos {
-      gap: calc(.625rem + .3125 * (100vw - 48rem)/ 72)
+      padding-left: calc(.0000000625rem + 8.1249999375 * (100vw - 62rem)/ 42.375)
     }
   }
+}
 
+.header__logos span {
+  color: rgba(255, 255, 255, .71);
+  font-weight: 400
+}
+
+@supports (font-size:clamp(0.75rem, 0.6666666667rem + 0.1736111111vw, 0.875rem)) {
   .header__logos span {
-    color: rgba(255, 255, 255, .71);
-    font-weight: 400
+    font-size: clamp(.75rem, .6666666667rem + .1736111111vw, .875rem)
+  }
+}
+
+@supports not (font-size:clamp(0.75rem, 0.6666666667rem + 0.1736111111vw, 0.875rem)) {
+  .header__logos span {
+    font-size: calc(.75rem + .125 * (100vw - 48rem)/ 72)
+  }
+}
+
+@media screen and (max-width:576px) {
+  :root {
+    --container-paddings: 0 15px
   }
 
-  @supports (font-size:clamp(0.75rem, 0.6666666667rem + 0.1736111111vw, 0.875rem)) {
-    .header__logos span {
-      font-size: clamp(.75rem, .6666666667rem + .1736111111vw, .875rem)
-    }
+  .header__logo {
+    max-width: 75px
   }
 
-  @supports not (font-size:clamp(0.75rem, 0.6666666667rem + 0.1736111111vw, 0.875rem)) {
-    .header__logos span {
-      font-size: calc(.75rem + .125 * (100vw - 48rem)/ 72)
-    }
+  .header__inner {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center
   }
+}
 
-  @media screen and (max-width:576px) {
-    :root {
-      --container-paddings: 0 15px
-    }
+.burger {
+  display: none;
+  --burger-width: 30px;
+  --burger-height: 22px;
+  --burger-line-height: 2px;
+  position: relative;
+  border: none;
+  padding: 0;
+  width: var(--burger-width);
+  height: var(--burger-height);
+  color: var(--white-color);
+  background-color: transparent;
+  cursor: pointer;
+  z-index: 3
+}
 
-    .header__logo {
-      max-width: 75px
-    }
+.burger::after,
+.burger::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: var(--burger-line-height);
+  background-color: currentColor;
+  -webkit-transition: top .3s ease-in-out, -webkit-transform .3s ease-in-out;
+  transition: transform .3s ease-in-out, top .3s ease-in-out, -webkit-transform .3s ease-in-out;
+  border-radius: 2px
+}
 
-    .header__inner {
-      -webkit-box-align: center;
-      -ms-flex-align: center;
-      align-items: center
-    }
-  }
+.burger::before {
+  top: 0
+}
 
+.burger::after {
+  top: calc(100% - var(--burger-line-height))
+}
+
+.burger__line {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 100%;
+  height: var(--burger-line-height);
+  background-color: currentColor;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  -webkit-transition: -webkit-transform .3s ease-in-out;
+  transition: transform .3s ease-in-out;
+  transition: transform .3s ease-in-out, -webkit-transform .3s ease-in-out;
+  border-radius: 2px
+}
+
+.burger--active {
+  --burger-line-height: 3px
+}
+
+.burger--active::before {
+  top: 50%;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+  -webkit-transition: top .3s ease-in-out, -webkit-transform .3s ease-in-out;
+  transition: transform .3s ease-in-out, top .3s ease-in-out, -webkit-transform .3s ease-in-out
+}
+
+.burger--active::after {
+  top: 50%;
+  -webkit-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-transition: top .3s ease-in-out, -webkit-transform .3s ease-in-out;
+  transition: transform .3s ease-in-out, top .3s ease-in-out, -webkit-transform .3s ease-in-out
+}
+
+.burger--active .burger__line {
+  -webkit-transform: scale(0);
+  -ms-transform: scale(0);
+  transform: scale(0);
+  -webkit-transition: -webkit-transform .3s ease-in-out;
+  transition: transform .3s ease-in-out;
+  transition: transform .3s ease-in-out, -webkit-transform .3s ease-in-out
+}
+
+.menu {
+  -webkit-transition: -webkit-transform var(--transition-duration) ease;
+  transition: -webkit-transform var(--transition-duration) ease;
+  transition: transform var(--transition-duration) ease;
+  transition: transform var(--transition-duration) ease, -webkit-transform var(--transition-duration) ease;
+  max-width: 304px;
+  width: 100%;
+  gap: 10px
+}
 
 .hero {
   min-height: calc(100vh - 105px);
   background-color: var(--primary-color);
-  background-image: url("../img/hero-bg.jpg");
+  background-image: url(../img/hero-bg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   padding-top: 170px;
-  padding-bottom: 100px;
+  padding-bottom: 100px
 }
-@supports (margin-bottom: clamp( 5rem , 4.2788461538rem  +  3.2051282051vw , 8.125rem )) {
+
+@supports (margin-bottom:clamp(5rem, 4.2788461538rem + 3.2051282051vw, 8.125rem)) {
   .hero {
-    margin-bottom: clamp( 5rem , 4.2788461538rem  +  3.2051282051vw , 8.125rem );
+    margin-bottom: clamp(5rem, 4.2788461538rem + 3.2051282051vw, 8.125rem)
   }
 }
-@supports not (margin-bottom: clamp( 5rem , 4.2788461538rem  +  3.2051282051vw , 8.125rem )) {
+
+@supports not (margin-bottom:clamp(5rem, 4.2788461538rem + 3.2051282051vw, 8.125rem)) {
   .hero {
-    margin-bottom: calc(5rem + 3.125 * (100vw - 22.5rem) / 97.5);
+    margin-bottom: calc(5rem + 3.125 * (100vw - 22.5rem)/ 97.5)
   }
 }
-@media screen and (max-width: 1600px) {
+
+@media screen and (max-width:1600px) {
   .hero {
-    background-image: url("../img/hero-bg-mobile.jpg");
+    background-image: url(../img/hero-bg-mobile.jpg)
   }
 }
-@media screen and (min-height: 1000px) {
+
+@media screen and (min-height:1000px) {
   .hero {
-    background-position: 60% center;
+    background-position: 60% center
   }
 }
-@media screen and (max-width: 768px) {
+
+@media screen and (max-width:360px) {
   .hero {
-    background-image: url("../img/hero-bg.jpg");
-    padding-top: 120px;
+    background-position-x: 10%
   }
 }
-@media screen and (max-width: 576px) {
-  .hero {
-    background-position: 30%;
-  }
-}
-@media screen and (max-width: 360px) {
-  .hero {
-    background-position-x: 10%;
-  }
-}
+
 .hero__title {
-  margin-bottom: 30px;
+  margin-bottom: 30px
 }
-@supports (font-size: clamp( 2.5rem , 1.6923076923rem  +  3.5897435897vw , 6rem )) {
+
+@supports (font-size:clamp(2.5rem, 1.6923076923rem + 3.5897435897vw, 6rem)) {
   .hero__title {
-    font-size: clamp( 2.5rem , 1.6923076923rem  +  3.5897435897vw , 6rem );
+    font-size: clamp(2.5rem, 1.6923076923rem + 3.5897435897vw, 6rem)
   }
 }
-@supports not (font-size: clamp( 2.5rem , 1.6923076923rem  +  3.5897435897vw , 6rem )) {
+
+@supports not (font-size:clamp(2.5rem, 1.6923076923rem + 3.5897435897vw, 6rem)) {
   .hero__title {
-    font-size: calc(2.5rem + 3.5 * (100vw - 22.5rem) / 97.5);
+    font-size: calc(2.5rem + 3.5 * (100vw - 22.5rem)/ 97.5)
   }
 }
+
 .hero__btn {
-  min-width: 349px;
+  min-width: 349px
 }
-@media screen and (max-width: 576px) {
+
+@media screen and (max-width:576px) {
+  .hero {
+    background-position: 30%
+  }
+
   .hero__btn {
     min-width: unset;
-    width: 100%;
+    width: 100%
   }
 }
-.hero__info {
-  max-width: 823px;
+
+@media screen and (max-width:1670px) {
+  .hero__info {
+    max-width: 923px
+  }
+
+  @supports (padding-left:clamp(0.0000000625rem, -11.8879054508rem + 19.1740411504vw, 8.125rem)) {
+    .hero__info {
+      padding-left: clamp(.0000000625rem, -11.8879054508rem + 19.1740411504vw, 8.125rem)
+    }
+  }
+
+  @supports not (padding-left:clamp(0.0000000625rem, -11.8879054508rem + 19.1740411504vw, 8.125rem)) {
+    .hero__info {
+      padding-left: calc(.0000000625rem + 8.1249999375 * (100vw - 62rem)/ 42.375)
+    }
+  }
 }
+
 .hero__inner {
-  min-height: inherit;
+  min-height: inherit
 }
+
 .hero__description {
   max-width: 608px;
-  line-height: 1.1;
+  line-height: 1.1
 }
-@supports (margin-bottom: clamp( 2.1875rem , 1.8269230769rem  +  1.6025641026vw , 3.75rem )) {
+
+@supports (margin-bottom:clamp(2.1875rem, 1.8269230769rem + 1.6025641026vw, 3.75rem)) {
   .hero__description {
-    margin-bottom: clamp( 2.1875rem , 1.8269230769rem  +  1.6025641026vw , 3.75rem );
+    margin-bottom: clamp(2.1875rem, 1.8269230769rem + 1.6025641026vw, 3.75rem)
   }
 }
-@supports not (margin-bottom: clamp( 2.1875rem , 1.8269230769rem  +  1.6025641026vw , 3.75rem )) {
+
+@supports not (margin-bottom:clamp(2.1875rem, 1.8269230769rem + 1.6025641026vw, 3.75rem)) {
   .hero__description {
-    margin-bottom: calc(2.1875rem + 1.5625 * (100vw - 22.5rem) / 97.5);
+    margin-bottom: calc(2.1875rem + 1.5625 * (100vw - 22.5rem)/ 97.5)
   }
 }
+
 .hero__notice {
   position: relative;
   line-height: 1.3;
-  gap: 10px;
+  gap: 10px
 }
-@supports (margin-bottom: clamp( 2.1875rem , 1.8269230769rem  +  1.6025641026vw , 3.75rem )) {
+
+@supports (margin-bottom:clamp(2.1875rem, 1.8269230769rem + 1.6025641026vw, 3.75rem)) {
   .hero__notice {
-    margin-bottom: clamp( 2.1875rem , 1.8269230769rem  +  1.6025641026vw , 3.75rem );
+    margin-bottom: clamp(2.1875rem, 1.8269230769rem + 1.6025641026vw, 3.75rem)
   }
 }
-@supports not (margin-bottom: clamp( 2.1875rem , 1.8269230769rem  +  1.6025641026vw , 3.75rem )) {
+
+@supports not (margin-bottom:clamp(2.1875rem, 1.8269230769rem + 1.6025641026vw, 3.75rem)) {
   .hero__notice {
-    margin-bottom: calc(2.1875rem + 1.5625 * (100vw - 22.5rem) / 97.5);
+    margin-bottom: calc(2.1875rem + 1.5625 * (100vw - 22.5rem)/ 97.5)
   }
 }
-@supports (font-size: clamp( 1rem , 0.9423076923rem  +  0.2564102564vw , 1.25rem )) {
+
+@supports (font-size:clamp(1rem, 0.9423076923rem + 0.2564102564vw, 1.25rem)) {
   .hero__notice {
-    font-size: clamp( 1rem , 0.9423076923rem  +  0.2564102564vw , 1.25rem );
+    font-size: clamp(1rem, .9423076923rem + .2564102564vw, 1.25rem)
   }
 }
-@supports not (font-size: clamp( 1rem , 0.9423076923rem  +  0.2564102564vw , 1.25rem )) {
+
+@supports not (font-size:clamp(1rem, 0.9423076923rem + 0.2564102564vw, 1.25rem)) {
   .hero__notice {
-    font-size: calc(1rem + 0.25 * (100vw - 22.5rem) / 97.5);
+    font-size: calc(1rem + .25 * (100vw - 22.5rem)/ 97.5)
   }
 }
+
 .hero__notice svg {
   -webkit-box-flex: 0;
   -ms-flex: 0 0 50px;
-  flex: 0 0 50px;
+  flex: 0 0 50px
 }
-
-  </style> -->
-
+  </style>
 
   <link rel="stylesheet" href="css/vendor.css">
   <link rel="stylesheet" href="css/main.css">
