--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,10 +5,7 @@
         <a href="#" class="header__logo">
           <img src="img/svg/logos/nabta.svg" alt="Nabta Logo" width="117" height="60">
         </a>
-        <span>powered by</span>
-        <a href="" class="header__logo">
-          <img src="img/svg/logos/alesca.svg" alt="Alesca Logo" width="112" height="67">
-        </a>
+        <span>powered by Alesca</span>
       </div>
 
         <nav class="menu" data-menu>
