--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -162,3 +162,12 @@ a {
   padding-top: 15px;
   padding-left: 12px;
 }
+
+.bg-section {
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.line-height-xl {
+  line-height: 1.3;
+}
