--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -2,11 +2,14 @@
   --primary-color: #0D3B3B;
   --primary-color-20: #0D3B3B33;
   --primary-color-40: #0d3b3b66;
+  --primary-color-64: #0D3B3BA3;
   --secondary-color: #E3E2AA;
   --white-color: #fff;
   --white-color-20: #f3f1f1;
   --transition-duration: 0.3s;
   --font-family: "Manrope";
+  --font-family-secondary: "Montserrat";
+
   --container-width: 1670px;
   --container-paddings: 0 40px;
 }
