--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -2,3 +2,4 @@
 @include font-face("Manrope", "../fonts/Manrope-Semibold", 600, normal);
 @include font-face("Manrope", "../fonts/Manrope-Medium", 500, normal);
 @include font-face("Manrope", "../fonts/Manrope-Regular", 400, normal);
+@include font-face("Montserrat", "../fonts/Montserrat-Italic", 400, italic);
