--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -14,8 +14,10 @@
 
     span {
       color: rgba(255, 255, 255, 0.71);
-      @include adaptiveValue(font-size, 14, 12, 1920, 768, 1);
+      font-size: 14px;
       font-weight: 400;
+      font-style: italic;
+      font-family: var(--font-family-secondary);
     }
   }
 
