--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,7 @@
 @import "./components/header";
 @import "./components/footer";
 @import "./components/button";
+@import "./components/modal";
 
 //sections
 @import "./sections/hero";
@@ -21,6 +22,8 @@
 @import "./sections/about";
 @import "./sections/info";
 @import "./sections/packages";
+@import "./sections/trial";
+@import "./sections/terms-and-conditions";
 
 
 
