--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -24,9 +24,9 @@
   }
 
   &__item {
-    @media screen and (max-width: 768px) {
-      position: relative;
-      padding-bottom: 56.25%;
+    position: relative;
+    @media screen and (max-width: 1200px) {
+      padding-bottom: 46.25%;
       width: 100%;
       max-width: 860px;
 
@@ -37,6 +37,29 @@
       width: 100%;
       height: 100%;
     }
+    }
+
+    @media screen and (max-width: 768px) {
+      padding-bottom: 60%;
+    }
+
+    @media screen and (max-width: 576px) {
+      padding-bottom: 80%;
+    }
+  }
+
+  &__close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(80px, -20px);
+
+    @media screen and (max-width: 1200px) {
+      transform: translateY(-60px) translateX(40px);
+    }
+
+    @media screen and (max-width: 992px) {
+      transform: translateY(-60px);
     }
   }
 }
