--- a/src/scss/sections/_packages.scss
+++ b/src/scss/sections/_packages.scss
@@ -26,9 +26,9 @@
 
   &__item {
     border: 1px solid var(--primary-color-40);
-    @include adaptiveValue(padding-right, 50, 30, 1200, 992, 1);
-    @include adaptiveValue(padding-left, 50, 30, 1200, 992, 1);
-    @include adaptiveValue(padding-top, 50, 30, 1200, 992, 1);
+    @include adaptiveValue(padding-right, 50, 30, 1920, 1200, 1);
+    @include adaptiveValue(padding-left, 50, 30, 1920, 1200, 1);
+    @include adaptiveValue(padding-top, 50, 30, 1920, 1200, 1);
     @include adaptiveValue(padding-bottom, 80, 40, 1920, 360, 1);
     align-items: start;
     overflow: hidden;
@@ -39,12 +39,13 @@
   &__images {
     grid-template-columns: repeat(4, 1fr);
     gap: 10px;
-    @include adaptiveValue(margin-bottom, 40, 18, 1920, 360, 1);
+    @include adaptiveValue(margin-bottom, 40, 18, 1200, 360, 1);
     justify-items: center;
     align-items: center;
 
-    @media screen and (max-width: 1400px) {
-      grid-template-columns: repeat(auto-fill, minmax(110px, 1fr));
+
+    @media screen and (max-width: 992px) {
+      grid-template-columns: repeat(2, 1fr);
     }
 
     @media screen and (max-width: 767px) {
@@ -60,9 +61,13 @@
   &__info-weights {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    column-gap: 30px;
+    column-gap: 60px;
     align-items: start;
     row-gap: 28px;
+
+    @media screen and (max-width: 992px) {
+      column-gap: 55px;
+    }
   }
 
   &__image {
@@ -76,11 +81,16 @@
     height: 128px;
 
     @media screen and (max-width: 1400px) {
-      max-width: 110px;
-      height: 110px;
+      max-width: 118px;
+      height: 118px;
     }
 
-    @media screen and (max-width: 767px) {
+    @media screen and (max-width: 1200px) {
+      max-width: 90px;
+      height: 90px;
+    }
+
+    @media screen and (max-width: 992px) {
       max-width: 128px;
       height: 128px;
     }
@@ -92,7 +102,11 @@
 
   &__subtitle {
     @include adaptiveValue(margin-bottom, 50, 25, 1920, 360, 1);
-    @include adaptiveValue(font-size, 34, 22, 1920, 360, 1);
+    @include adaptiveValue(font-size, 40, 34, 1920, 1200, 1);
+
+    @media screen and (max-width: 1200px) {
+      @include adaptiveValue(font-size, 34, 22, 1200, 360, 1);
+    }
   }
 
   &__info {
